#168 Hide a test cases ordering caused bug
Signed-off-by: vityaman <vityaman.dev@yandex.ru>